// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AvatarGroup default 1`] = `
<div>
  <div
    class="p-avatar-group p-component"
  />
</div>
`;

exports[`AvatarGroup group 1`] = `
<div>
  <div
    class="p-avatar-group p-component"
  >
    <div
      class="p-avatar p-component"
    >
      <span
        class="p-avatar-text"
      >
        P
      </span>
    </div>
    <div
      class="p-avatar p-component"
    >
      <span
        class="p-avatar-icon pi pi-search"
      />
    </div>
    <div
      class="p-avatar p-component p-avatar-image"
    >
      <img
        alt="avatar"
        src="user.png"
      />
    </div>
    <div
      class="p-avatar p-component"
    >
      <span
        class="p-avatar-text"
      >
        +2
      </span>
    </div>
  </div>
</div>
`;
